--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "C_Cpp.intelliSenseEngine": "disabled",
     "clangd.arguments": [
-        "--header-insertion=never"
+        "--header-insertion=never",
+        "--compile-commands-dir=build/artifacts"
     ]
 }
