--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,10 +4,50 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "openocd",
+            "label": "openocd: Launch",
             "type": "shell",
             "command": "openocd -f /usr/share/openocd/scripts/board/ti_ek-tm4c123gxl.cfg",
+            "problemMatcher": [],
             "isBackground": true
+        },
+        {
+            "label": "Project: Build",
+            "type": "shell",
+            "command": "ceedling release",
+            "group": "build",
+            "problemMatcher": [],
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "presentation": {
+                "panel": "new"
+            }
+        },
+        {
+            "label": "Project: Clean",
+            "type": "shell",
+            "command": "ceedling clobber",
+            "group": "build",
+            "problemMatcher": [],
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "presentation": {
+                "panel": "new"
+            }
+        },
+        {
+            "label": "Project: Load",
+            "type": "shell",
+            "command": "ceedling load",
+            "group": "build",
+            "problemMatcher": [],
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "presentation": {
+                "panel": "new"
+            }
         }
     ]
 }
