--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,7 @@
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
+            "targetArchitecture": "arm",
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
