--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,10 +1,8 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Project: Build",
+            "label": "Build",
             "type": "shell",
             "command": "ceedling release",
             "group": "build",
@@ -17,7 +15,7 @@
             }
         },
         {
-            "label": "Project: Clean",
+            "label": "Clean",
             "type": "shell",
             "command": "ceedling clobber",
             "group": "build",
@@ -30,10 +28,23 @@
             }
         },
         {
-            "label": "Project: Load",
+            "label": "Load",
             "type": "shell",
             "command": "ceedling load",
             "group": "build",
+            "problemMatcher": [],
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "presentation": {
+                "panel": "new"
+            }
+        },
+        {
+            "label": "Test",
+            "type": "shell",
+            "command": "ceedling test:all",
+            "group": "test",
             "problemMatcher": [],
             "options": {
                 "cwd": "${workspaceFolder}"
